--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,11 @@ body {
    color: #00c;
 }
 
+.post_title a {
+   color: inherit;
+   text-decoration: none;
+}
+
 .byline {
    color: #666;
    font-size: 95%;
