--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,30 @@ body {
    color: #111;
 }
 
+#leftnav {
+   position: absolute;
+   left: 0;
+   top: 0;
+   padding: 16px;
+   width: 200px;
+}
+
+#leftnav ul, #leftnav li {
+   margin-top: 0;
+   margin-left: 0;
+   padding: 0;
+   list-style-type: none;
+}
+
+#content {
+   position: absolute;
+   padding: 16px;
+   border-left: 2px solid #99e;
+   left: 216px;
+   right: 0;
+   top: 0;
+}
+
 .post {
    padding: 1em;
    border: 1px solid #999;
