--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,11 @@
 {% block head %}{% endblock %}
 </head>
 <body>
+<div id="leftnav">
+{% include "feeds/leftnav.html" %}
+</div>
+<div id="content">
 {% block content %}{% endblock %}
+</div>
 </body>
 </html>
